--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,39 +25,44 @@ on:
       - 'CHANGELOG.md'
 
 jobs:
-  checks:
+  setup:
+    name: Setup dependencies
+    runs-on: ubuntu-latest
+    outputs:
+      package-manager: ${{ steps.setup.outputs['package-manager'] }}
+      install-command: ${{ steps.setup.outputs['install-command'] }}
+      lockfile: ${{ steps.setup.outputs.lockfile }}
+      node-version: ${{ steps.setup.outputs['node-version'] }}
+      node-modules-cache-hit: ${{ steps.setup.outputs['node-modules-cache-hit'] }}
+
+    steps:
+      - name: Setup Node project
+        id: setup
+        uses: ./.github/actions/setup-node-project
+        with:
+          cache-prefix: ci
+
+      - name: Summarize setup
+        if: always()
+        run: |
+          {
+            echo "## Setup";
+            echo "- Status: ${{ job.status }}";
+            echo "- Package manager: ${{ steps.setup.outputs['package-manager'] }}";
+            echo "- Node.js version: ${{ steps.setup.outputs['node-version'] }}";
+            echo "- node_modules cache hit: ${{ steps.setup.outputs['node-modules-cache-hit'] }}";
+          } >> "$GITHUB_STEP_SUMMARY"
+
+  audit:
+    name: Audit
+    needs: setup
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4.2.1
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
         with:
-          version: ${{ env.PNPM_VERSION }}
-          run_install: false
-
-      - name: Setup Node.js
-        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444
-        with:
-          node-version-file: .nvmrc
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
-
-      - name: Activate package manager version from package.json
-        run: |
-          corepack enable
-          corepack prepare "$(node -p "require('./package.json').packageManager")" --activate
-      - name: Restore Next.js cache
-        uses: actions/cache@v4
-        with:
-          path: .next/cache
-          key: nextjs-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            nextjs-${{ runner.os }}-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline
+          cache-prefix: ci
 
       - name: Audit dependencies
         run: |
@@ -72,16 +77,84 @@ jobs:
           if [ "$AUDIT_STATUS" -ne 0 ]; then
             echo "pnpm audit reported issues below the high severity threshold."
           fi
+
+      - name: Summarize audit
+        if: always()
+        run: |
+          {
+            echo "## Audit";
+            echo "- Status: ${{ job.status }}";
+          } >> "$GITHUB_STEP_SUMMARY"
+
+  lint:
+    name: Lint
+    needs: setup
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
+        with:
+          cache-prefix: ci
+
       - name: Verify prompts registry
         run: pnpm run verify-prompts
+
       - name: Lint
         run: |
           echo "::add-matcher::.github/matchers/eslint-stylish.json"
           pnpm run lint:ci
+
+      - name: Summarize lint
+        if: always()
+        run: |
+          {
+            echo "## Lint";
+            echo "- Status: ${{ job.status }}";
+          } >> "$GITHUB_STEP_SUMMARY"
+
+  typecheck:
+    name: Type check
+    needs: setup
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
+        with:
+          cache-prefix: ci
+
       - name: Type check
         run: |
           echo "::add-matcher::.github/matchers/typescript.json"
           pnpm run typecheck:ci
+
+      - name: Summarize type check
+        if: always()
+        run: |
+          {
+            echo "## Type check";
+            echo "- Status: ${{ job.status }}";
+          } >> "$GITHUB_STEP_SUMMARY"
+
+  unit-tests:
+    name: Unit tests
+    needs: setup
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
+        with:
+          cache-prefix: ci
+
+      - name: Restore Next.js cache
+        uses: actions/cache@v4
+        with:
+          path: .next/cache
+          key: nextjs-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            nextjs-${{ runner.os }}-
 
       - name: Test (legacy depth)
         run: |
@@ -96,38 +169,23 @@ jobs:
         run: |
           node scripts/report-summary.mjs --junit=artifacts/unit --coverage=coverage/coverage-summary.json >> "$GITHUB_STEP_SUMMARY"
 
-      - name: Summarize results
+      - name: Summarize unit tests
         if: always()
         run: |
           {
-            echo "## CI Results";
-            echo "- Checks: ${{ job.status }}";
+            echo "## Unit tests";
+            echo "- Status: ${{ job.status }}";
           } >> "$GITHUB_STEP_SUMMARY"
 
   build:
     runs-on: ubuntu-latest
+    needs: setup
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4.2.1
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
         with:
-          version: ${{ env.PNPM_VERSION }}
-          run_install: false
-
-      - name: Setup Node.js
-        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444
-        with:
-          node-version-file: .nvmrc
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
-
-      - name: Activate package manager version from package.json
-        run: |
-          corepack enable
-          corepack prepare "$(node -p "require('./package.json').packageManager")" --activate
+          cache-prefix: ci
 
       - name: Restore Next.js cache
         uses: actions/cache@v4
@@ -136,9 +194,6 @@ jobs:
           key: nextjs-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
           restore-keys: |
             nextjs-${{ runner.os }}-
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Build
         run: pnpm run build
@@ -169,8 +224,10 @@ jobs:
             echo "- Preview routes validated: / (build)";
           } >> "$GITHUB_STEP_SUMMARY"
 
+
   playwright:
     runs-on: ubuntu-latest
+    needs: setup
     env:
       PLAYWRIGHT_HOST: 127.0.0.1
       PLAYWRIGHT_PORT: 3100
@@ -197,32 +254,14 @@ jobs:
           - suite: theme-previews
             title: Theme previews + axe
             command: >-
-              npx playwright test tests/e2e/accessibility.spec.ts tests/e2e/gallery-preview.spec.ts
-              tests/e2e/hero-images-preview.spec.ts tests/e2e/home-planner-previews.spec.ts
-              --config playwright.config.ts --project=chromium-w1440 --reporter=github --pass-with-no-tests
+              npx playwright test tests/e2e/accessibility.spec.ts tests/e2e/gallery-preview.spec.ts tests/e2e/hero-images-preview.spec.ts tests/e2e/home-planner-previews.spec.ts --config playwright.config.ts --project=chromium-w1440 --reporter=github --pass-with-no-tests
             previews: " /preview/theme-matrix, /preview/hero-images, /preview/gallery"
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4.2.1
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
         with:
-          version: ${{ env.PNPM_VERSION }}
-          run_install: false
-
-      - name: Setup Node.js
-        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444
-        with:
-          node-version-file: .nvmrc
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
-
-      - name: Activate package manager version from package.json
-        run: |
-          corepack enable
-          corepack prepare "$(node -p "require('./package.json').packageManager")" --activate
+          cache-prefix: ci
 
       - name: Restore Next.js cache
         uses: actions/cache@v4
@@ -231,9 +270,6 @@ jobs:
           key: nextjs-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
           restore-keys: |
             nextjs-${{ runner.os }}-
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
