feat: default safe mode env vars when undefined

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,8 @@ NEXT_PUBLIC_ORGANIC_DEPTH="false"
 NEXT_PUBLIC_UI_GLITCH_LANDING="true"
 
 # Safe mode gates experimental AI-assisted tooling on both the server and client.
-# Enable this when integrating external AI providers to keep production paths locked down.
+# The app defaults to "false" when these variables are omitted; set them to "true" explicitly
+# when integrating external AI providers to keep production paths locked down.
 SAFE_MODE="false"
 NEXT_PUBLIC_SAFE_MODE="false"
 
