--- a/.github/actions/setup-node-project/action.yml
+++ b/.github/actions/setup-node-project/action.yml
@@ -56,7 +56,7 @@ runs:
         if [ -n "${{ inputs['package-manager'] }}" ]; then
           RAW_PM="${{ inputs['package-manager'] }}"
         else
-          RAW_PM="$(node -p "(() => { try { return require('./package.json').packageManager || ''; } catch { return ''; } })()")"
+          RAW_PM="$(node --input-type=module -e "import { readFileSync } from 'node:fs'; import { resolve } from 'node:path'; import { cwd } from 'node:process'; try { const packageJsonPath = resolve(cwd(), 'package.json'); const packageJson = JSON.parse(readFileSync(packageJsonPath, 'utf8')); console.log(packageJson?.packageManager ?? ''); } catch { console.log(''); }")"
         fi
 
         if [ -z "$RAW_PM" ]; then
