--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "packageManager": "pnpm@10.13.1",
   "engines": {
-    "node": "22.x",
+    "node": ">=22",
     "pnpm": "10.13.1"
   },
   "name": "noxis-planner",
