chore: run workflows on work branch

--- a/.github/workflows/workflow-lint.yml
+++ b/.github/workflows/workflow-lint.yml
@@ -8,12 +8,14 @@ on:
   pull_request:
     branches:
       - main
+      - work
     paths:
       - '.github/**/*.yml'
       - '.github/**/*.yaml'
   push:
     branches:
       - main
+      - work
     paths:
       - '.github/**/*.yml'
       - '.github/**/*.yaml'
