--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
   pull_request:
     branches:
       - main
+      - work
     paths-ignore:
       - '**/*.md'
       - 'docs/**'
@@ -19,6 +20,7 @@ on:
   push:
     branches:
       - main
+      - work
     paths-ignore:
       - '**/*.md'
       - 'docs/**'
