--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,11 @@ jobs:
           } >> "$GITHUB_STEP_SUMMARY"
 
   build:
+    needs:
+      - lint
+      - typecheck
+      - unit-tests
+      - audit
     runs-on: ubuntu-latest
 
     steps:
